--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "displayTitle":"Titor-Z",
     "subTitle":"简单写点儿什么吧。",
     "homeUrl":"http://titor-z.github.io",
-    "avatarUrl":"http://meekdai.com/avatar.jpg",
-    "faviconUrl":"http://meekdai.com/favicon.ico",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/16252617?v=4",
+    "faviconUrl":"https://avatars.githubusercontent.com/u/16252617?v=4",
     "singlePage":[],
     "GMEEK_VERSION":"last"
 }
